added colors and minor styling

--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
     <main>
         <form>
             <div class="inputGroup">
-                <label for="month">Birth Month</label>
+                <!-- <label for="month">Birth Month</label> -->
                 <input class="inputBox" id="inputMonth" required name="month" type="number" min="1" max="12" placeholder="Birth month number">
             </div>
             <div class="inputGroup">
-                <label for="day">Birth Day</label>
+                <!-- <label for="day">Birth Day</label> -->
                 <input class="inputBox" id="inputDay" required name="day" type="number" min="1" max="31" placeholder="Birth day number">
             </div>
             <div class="inputGroup">
-                <label for="age">Age</label>
+                <!-- <label for="age">Age</label> -->
                 <input class="inputBox" id="inputAge" required name="age" type="number" min="1" max="100" placeholder="Age">
             </div>
             <div class="inputGroup">
-                <label for="color">Favorite Color</label>
+                <!-- <label for="color">Favorite Color</label> -->
                 <select class="inputBox" id="inputColor" required name="color">
                     <option value disabled selected>Select your favorite color from the options listed</option>
                     <option value="black">Black</option>
@@ -51,8 +51,8 @@
                 </select>
             </div>
             <div class="inputGroup">
-                <label for="ssn">Social Security Number (optional)</label>
-                <input class="inputBox" id="inputSsn" name="ssn" type="number" min="1" max="31" placeholder="Social Security Number">
+                <!-- <label for="ssn">Social Security Number (optional)</label> -->
+                <input class="inputBox" id="inputSsn" name="ssn" type="number" min="1" max="31" placeholder="Social Security Number (optional)">
             </div>
             <button id="submitBtn" type="submit">Submit</button>
         </form>
